#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include <unistd.h>
#include <arpa/inet.h>
#include <time.h>
#include <sys/select.h>

#include "chord.h"
#include "chord_impl.h"
#include "chord_arg_parser.h"
#include "chord.pb-c.h"

// Name: Sulagna Dash (worked by myself)

/**
 * @brief Sends a buffer to a Chord node over UDP.
 *
 * This helper function constructs a socket address from the provided Node structure
 * and sends the given buffer to that node using the sendto() system call. The function
 * handles error reporting and terminates the program if the send operation fails.
 *
 * @param node Pointer to the target Chord node to send the message to. The node's
 *             address and port are extracted to construct the destination socket address.
 *             Must not be NULL.
 * @param buffer Pointer to the buffer containing the message data to send. The buffer
 *               should contain a properly formatted Chord protocol message.
 * @param total_size The total size in bytes of the buffer to send. This should include
 *                   both the message length prefix and the actual message data.
 * @param error_msg Optional error message string to print before the system error
 *                  message. If NULL, only the system error message from perror() is
 *                  printed. The error message is printed to stderr.
 *
 * @note This function uses the global sockfd variable for the socket file descriptor.
 *       The function will call exit(1) if sendto() fails, so it does not return on error.
 *
 * @warning This function terminates the program on failure. Ensure proper error handling
 *          in calling code if graceful error recovery is needed.
 */
static void send_to_node(Node *node, uint8_t *buffer, size_t total_size, const char *error_msg)
{
	struct sockaddr_in node_addr;
	node_addr.sin_family = AF_INET;
	node_addr.sin_port = node->port;
	node_addr.sin_addr = (struct in_addr){.s_addr = node->address};

	if (sendto(sockfd, buffer, total_size, 0, (struct sockaddr *)&node_addr, sizeof(struct sockaddr_in)) < 0)
	{
		if (error_msg)
		{
			fprintf(stderr, "%s\n", error_msg);
		}
		perror("sendto()");
		exit(1);
	}
}

/**
 * @brief Waits for a specific Chord protocol message response with timeout.
 *
 * This helper function polls the socket for incoming messages and processes them
 * until either the expected message type is received or a timeout occurs. The function
 * uses select() to efficiently wait for socket data availability with a 1-second timeout
 * per iteration, and continues polling for up to 1 second total.
 *
 * @param process_msg_param An integer parameter passed to process_chord_msg() to
 *                          identify the context or message type being processed.
 *                          This is used internally by the message processing logic.
 * @param expected_type The expected ChordMessage__MsgCase type that indicates the
 *                     desired response message type. The function will continue
 *                     polling until a message of this type is received.
 *
 * @return MessageResponse The response message received. If the expected message type
 *                         is received, response.type will match expected_type. If a
 *                         timeout occurs or an error happens, response.type will be
 *                         CHORD_MESSAGE__MSG__NOT_SET or another value, and the caller
 *                         should check response.type to determine if the expected
 *                         message was received.
 *
 * @note This function uses the global sockfd variable for the socket file descriptor.
 *       The function implements a timeout mechanism: it will poll for up to 1 second
 *       total, checking for socket data availability every 1 second using select().
 *       If select() fails, the function breaks out of the loop and returns the current
 *       response (which will have type CHORD_MESSAGE__MSG__NOT_SET if no message was
 *       received).
 *
 * @warning The function may return a response with a type different from expected_type
 *          if a timeout occurs or an error happens. Callers must check response.type
 *          to verify that the expected message was actually received before using
 *          the response data.
 */
static MessageResponse wait_for_response(int process_msg_param, ChordMessage__MsgCase expected_type)
{
	time_t currTime = time(NULL);
	time_t timeoutTime = time(NULL) + 1;

	MessageResponse response = {.type = CHORD_MESSAGE__MSG__NOT_SET};
	do
	{
		fd_set readfds;
		FD_ZERO(&readfds);
		FD_SET(sockfd, &readfds);

		struct timeval timeout;
		timeout.tv_sec = 1;
		timeout.tv_usec = 0;

		int ret = select(sockfd + 1, &readfds, NULL, NULL, &timeout);

		if (ret < 0)
		{
			perror("Select error");
			break;
		}
		else if (ret > 0 && FD_ISSET(sockfd, &readfds))
		{
			response = process_chord_msg(process_msg_param);
		}

		currTime = time(NULL);
	} while (currTime < timeoutTime && response.type != expected_type);

	return response;
}

/**
 * @brief Packs a ChordMessage into a network-ready buffer.
 *
 * This helper function takes a ChordMessage structure, calculates its packed size,
 * allocates a buffer with space for the message length prefix, converts the length
 * to network byte order, and packs the message into the buffer. The buffer includes
 * a 64-bit length prefix followed by the packed message data.
 *
 * @param msg Pointer to the ChordMessage structure to pack. The message must be
 *            properly initialized with all required fields set before calling
 *            this function.
 * @param total_size Output parameter that will be set to the total size of the
 *                   allocated buffer (including the length prefix).
 *
 * @return uint8_t* Pointer to the allocated buffer containing the packed message.
 *                  The buffer contains:
 *                  - First 8 bytes: message length in network byte order
 *                  - Remaining bytes: the packed ChordMessage data
 *                  The caller is responsible for freeing this buffer with free().
 *
 * @note The function allocates memory using malloc(). The caller must free the
 *       returned buffer to avoid memory leaks.
 *
 * @warning If memory allocation fails, malloc() will return NULL and the function
 *          will return NULL. Callers should check for NULL return values before
 *          using the buffer.
 */
static uint8_t *pack_chord_message(ChordMessage *msg, size_t *total_size)
{
	uint64_t msg_len = chord_message__get_packed_size(msg);

	*total_size = sizeof(uint64_t) + msg_len;
	uint8_t *buffer = malloc(*total_size);
	if (!buffer)
	{
		return NULL;
	}

	uint64_t networkLen = htobe64(msg_len);
	memcpy(buffer, &networkLen, sizeof(networkLen));
	chord_message__pack(msg, buffer + sizeof(networkLen));

	return buffer;
}

// help functions are provided above, you may use them in the following functions
// but you should not modify them

void stabilize()
{
	// TODO:
	// Ask successor for its predecessor, update if necessary, and notify
	GetPredecessorRequest request = GET_PREDECESSOR_REQUEST__INIT;
	ChordMessage msg = CHORD_MESSAGE__INIT;
	msg.version = 417;
	msg.get_predecessor_request = &request;
	msg.msg_case = CHORD_MESSAGE__MSG_GET_PREDECESSOR_REQUEST;

	size_t total_size;
	uint8_t *buffer = pack_chord_message(&msg, &total_size);
	if (!buffer)
		return;

	send_to_node(&successor, buffer, total_size, NULL);
	MessageResponse response = wait_for_response(2, CHORD_MESSAGE__MSG_GET_PREDECESSOR_RESPONSE);
	free(buffer);

	if (response.type == CHORD_MESSAGE__MSG_GET_PREDECESSOR_RESPONSE)
	{
		Node x = response.node;
		// check if x is between us and successor (exclusive on both ends)
		if (x.key != 0 && x.key != hash && x.key != successor.key &&
			element_of(x.key, hash, successor.key, 0))
		{
			successor = x;
			successor_list[0] = x;
		}
	}
	else
	{
		// successor failed: recover from successor list
		int found = 0;
		for (size_t i = 1; i < chord_args.num_successors; i++)
		{
			if (successor_list[i].key != 0 && successor_list[i].key != successor.key)
			{
				successor = successor_list[i];
				found = 1;
				break;
			}
		}

		if (!found)
		{
			// no other successor available: we become own successor
			successor = self;
		}

		// rebuild successor list starting with new successor
		successor_list[0] = successor;
		for (size_t i = 1; i < chord_args.num_successors; i++)
		{
			successor_list[i].key = 0;
		}
	}

	notify();
}

void fix_successor_list()
{
	// TODO:
	// 1) If id in (n, successor], return successor
	// 2) Otherwise forward request to closest preceding node
	GetSuccessorListRequest request = GET_SUCCESSOR_LIST_REQUEST__INIT;
	ChordMessage msg = CHORD_MESSAGE__INIT;
	msg.version = 417;
	msg.get_successor_list_request = &request;
	msg.msg_case = CHORD_MESSAGE__MSG_GET_SUCCESSOR_LIST_REQUEST;

	size_t total_size;
	uint8_t *buffer = pack_chord_message(&msg, &total_size);
	if (!buffer)
		return;

	send_to_node(&successor, buffer, total_size, NULL);
	MessageResponse response = wait_for_response(3, CHORD_MESSAGE__MSG_GET_SUCCESSOR_LIST_RESPONSE);
	free(buffer);

	if (response.type == CHORD_MESSAGE__MSG_GET_SUCCESSOR_LIST_RESPONSE)
	{
		// update successor list: start with our immediate successor
		successor_list[0] = successor;

		// add successors from response
		size_t list_index = 1;
		for (size_t i = 0; i < response.n_successors && list_index < chord_args.num_successors; i++)
		{
			Node succ_node = response.successors[i];

			// dont add ourselves to the list unless alone
			if (succ_node.key != hash || successor.key == hash)
			{
				successor_list[list_index] = succ_node;
				list_index++;
			}

			// if we wrapped around to ourselves then fill the rest with ourselves
			if (succ_node.key == hash && successor.key != hash)
			{
				// completed the ring,fill remaining with self
				for (size_t j = list_index; j < chord_args.num_successors; j++)
				{
					successor_list[j] = self;
				}
				break;
			}
		}

		// clear any remaining unfilled entries but shouldnt happen if list wraps properly
		for (size_t i = list_index; i < chord_args.num_successors; i++)
		{
			if (successor_list[i].key == 0)
			{
				successor_list[i].key = 0;
			}
		}

		if (response.successors)
		{
			free(response.successors);
		}
	}
	else
	{
		// successor didn't respond: it failed
		int found = 0;
		for (size_t i = 1; i < chord_args.num_successors; i++)
		{
			if (successor_list[i].key != 0 && successor_list[i].key != successor.key)
			{
				successor = successor_list[i];
				found = 1;
				break;
			}
		}

		if (!found)
		{
			successor = self;
		}

		// rebuild successor list
		successor_list[0] = successor;
		for (size_t i = 1; i < chord_args.num_successors; i++)
		{
			successor_list[i].key = 0;
		}
	}
}

void fix_fingers()
{
	// TODO:
	// Periodically rebuild finger[i]
	uint64_t start = hash + ((uint64_t)1 << fixIndex);
	Node s = find_successor(start);
	finger_table[fixIndex] = s;
	fixIndex = (fixIndex + 1) % M;
}

Node find_successor(uint64_t id)
{
	// TODO:
	// 1) If id in (n, successor], return successor
	// 2) Otherwise forward request to closest preceding node

	// Base case: id âˆˆ (n, successor]
	if (element_of(id, hash, successor.key, 1))
	{
		return successor;
	}

	Node n_prime = closest_preceding_node(id);

	// If closest_preceding_node returns ourselves, return successor
	if (n_prime.key == hash)
	{
		return successor;
	}

	FindSuccessorRequest request = FIND_SUCCESSOR_REQUEST__INIT;
	request.key = id;

	ChordMessage msg = CHORD_MESSAGE__INIT;
	msg.version = 417;
	msg.find_successor_request = &request;
	msg.msg_case = CHORD_MESSAGE__MSG_FIND_SUCCESSOR_REQUEST;

	size_t total_size;
	uint8_t *buffer = pack_chord_message(&msg, &total_size);
	if (!buffer)
	{
		return successor;
	}

	send_to_node(&n_prime, buffer, total_size, NULL);
	MessageResponse response = wait_for_response(4, CHORD_MESSAGE__MSG_FIND_SUCCESSOR_RESPONSE);
	free(buffer);

	if (response.type == CHORD_MESSAGE__MSG_FIND_SUCCESSOR_RESPONSE)
	{
		return response.node;
	}

	// node failed, fall back to successor
	return successor;
}

Node closest_preceding_node(uint64_t id)
{
	// TODO:
	// Scan finger table for closest predecessor
	// Scan finger table from highest to lowest

	// first scan finger table from highest to lowest
	for (int i = M - 1; i >= 0; i--)
	{
		if (finger_table[i].key != 0 &&
			finger_table[i].key != hash &&
			element_of(finger_table[i].key, hash, id, 0))
		{
			return finger_table[i];
		}
	}

	// scan successor list from furthest to closest
	for (int i = chord_args.num_successors - 1; i >= 0; i--)
	{
		if (successor_list[i].key != 0 &&
			successor_list[i].key != hash &&
			element_of(successor_list[i].key, hash, id, 0))
		{
			return successor_list[i];
		}
	}

	return self;
}
